make theme button smaller and correct colors

--- a/css/index.css
+++ b/css/index.css
@@ -14,42 +14,42 @@ body.active {
 #toggle {
 	position: relative;
 	display: block;
-	width: 320px;
-	height: 160px;
-	border-radius: 160px;
-	background: #222;
+	width: 48px;
+	height: 24px;
+	border-radius: 24px;
+	background: #606060;
 	transition: 0.5s;
 	cursor: pointer;
 	box-shadow: inset 0 8px 60px rgba(0,0,0,0.1),
-				inset 0 8px 8px rgba(0,0,0,0.1),
-				inset 0 -4px 4px rgba(0,0,0,0.1);
+				inset 0 2px 8px rgba(0,0,0,0.4),
+				inset 0 -2px 8px rgba(0,0,0,0.4);
 }
 #toggle .indicator {
 	position: absolute;
 	top: 0;
 	left: 0;
-	width: 160px;
-	height: 160px;
+	width: 24px;
+	height: 24px;
 	border-radius: 50%;
-	background: linear-gradient(to bottom, #444, #222);
-	transform: scale(0.9);
-	box-shadow: inset 0 8px 40px rgba(0,0,0,0.5),
-				inset 0 4px 4px rgba(255,255,255,0.2),
-				inset 0 -4px 4px rgba(255,255,255,0.2);
+	background: linear-gradient(to bottom, #eaeaea, #C0C0C0);
+	transform: scale(0.84);
+	box-shadow: inset 0 8px 40px rgba(0,0,0,0.1),
+				inset 0 4px 4px rgba(255,255,255,0.4),
+				inset 0 -4px 4px rgba(255,255,255,0.4);
 	transition: 0.5s;
 }
 #toggle.active {
-	background: #fff;
+	background: #808080;
 	box-shadow: inset 0 2px 60px rgba(0,0,0,0.1),
-				inset 0 2px 8px rgba(0,0,0,0.1),
-				inset 0 -4px 4px rgba(0,0,0,0.05);
+				inset 0 2px 8px rgba(0,0,0,0.4),
+				inset 0 -2px 8px rgba(0,0,0,0.4);
 }
 #toggle.active .indicator {
-	left: 160px;
-	background: linear-gradient(to bottom, #eaeaea, #f9f9f9);
-	box-shadow: 0 8px 40px rgba(0,0,0,0.1),
-				inset 0 4px 4px rgba(255,255,255,1),
-				inset 0 -4px 4px rgba(255,255,255,1);
+	left: 24px;
+	background: linear-gradient(to bottom, #eaeaea, #C0C0C0);
+	box-shadow: inset 0 8px 40px rgba(0,0,0,0.1),
+				inset 0 4px 4px rgba(255,255,255,0.4),
+				inset 0 -4px 4px rgba(255,255,255,0.4);
 }
 #loading {
     min-height: 100vh;
